--- a/html/dirty-flag.html
+++ b/html/dirty-flag.html
@@ -359,9 +359,8 @@ turn up uses of this pattern.</p>
 <p>This lets us avoid having to actually recursively set each child&#x2019;s <code>_dirty</code> flag in <code>setTransform()</code>. Instead, we&#x2019;ll just pass the parent&#x2019;s dirty flag down to its children when we render and look at that too to see if we need to recalculate the world transform.</p>
 <p>The end result here is exactly what we want: changing a node&#x2019;s local transform is just a couple of assignments, and rendering the world calculates the exact minimum number of world transforms that have changed since the last frame.</p>
 <h2><a href="#design-decisions" name="design-decisions">Design Decisions</a></h2>
-<p>This is a pretty concrete pattern, so it isn&#x2019;t that open-ended. There are only a couple of things to tune with it:</p>
+<p>This pattern is pretty specific, so there are only a couple of knobs to twiddle on it:</p>
 <h3><a href="#when-is-the-dirty-flag-cleaned" name="when-is-the-dirty-flag-cleaned">When is the dirty flag cleaned?</a></h3>
-<p>The most basic question you&#x2019;ll have to answer is when to actually do the work you&#x2019;ve deferred. You can&#x2019;t defer it <em>forever</em>, after all. Here&#x2019;s a few options from least to most eager.</p>
 <ul>
 <li>
 <p><strong>If you defer it until the result is needed:</strong></p>
@@ -369,7 +368,7 @@ turn up uses of this pattern.</p>
 <li>
 <p><em>It avoids doing calculation entirely if the result is never used.</em> For
     primary data that changes frequently and where the derived data is
-    rarely accessed, this can be a huge win.</p>
+    rarely accessed, this can be a big win.</p>
 </li>
 <li>
 <p><em>If the calculation is time-consuming, it can cause a noticeable pause.</em>
@@ -382,12 +381,10 @@ turn up uses of this pattern.</p>
 <li>
 <p><strong>At well-defined checkpoints:</strong></p>
 <p>Sometimes there is a point in time or the progression of the game where it&#x2019;s
-natural to do the deferred synchronization or calculation. For example, you
-may want to delay saving the game until the player reaches some kind of
-check point in the level.</p>
-<p>These synchronization points may not be user visible or part of the game
-mechanics. For example, maybe there&#x2019;s a loading screen or a cut scene that
-you can hide the work behind.</p>
+natural to do the deferred synchronization or calculation. For example,
+we may want to save the game only when the pirate sails into port. Or the
+sync point may not part of the game mechanics. We may just want to hide the
+work behind a loading screen or a cut scene.</p>
 <ul>
 <li>
 <p><em>You can ensure the time spent doing the work doesn&#x2019;t impact the user
@@ -408,71 +405,53 @@ longer than you expected.</p>
 <li>
 <p><strong>In the background:</strong></p>
 <p>Like your text editor that auto-saves a backup every few minutes, you can
-do the work on some fixed time interval. Usually, you&#x2019;ll kick off the timer
-on the first modification and the process all of the changes that happened
-between then and when the timer fires. Then you reset and start all over
-again.</p>
+do the work after some time interval. Usually, you&#x2019;ll start the <span name="hysteresis">timer</span>
+on the first modification and then process all of the changes that happened
+between then and when the timer fires.</p>
+<aside name="hysteresis">
+
+<p>The term in human-computer interaction for in intentional delay between
+when a program receives user input and when it responds is <a href="http://en.wikipedia.org/wiki/Hysteresis"><em>hysteresis</em></a>.</p>
+</aside>
+
 <ul>
 <li>
-<p><em>You can tune how frequently the work is performed.</em> Here the timing of
-    when we clean the dirty state and perform the work isn&#x2019;t dependent on
-    the player requesting some data or reaching some checkpoint, so we can
-    ensure it happens as frequently (or infrequently as we want).</p>
+<p><em>You can tune how often the work is performed.</em> Since the time
+    when we clean the dirty state and do the work isn&#x2019;t dependent on
+    the player requesting some data or reaching some checkpoint, we can
+    ensure it happens as frequently (or infrequently) as we want.</p>
 </li>
 <li>
 <p><em>You can do more redundant work.</em> If the primary state only changes a
-    tiny amount during the timer&#x2019;s run, and the granularity of our dirty
-    flags is too coarse, we&#x2019;ll do work on a bunch of data that hasn&#x2019;t
-    changed. If tiny changes trickle in, that timer will constantly be
-    running and triggering work over data again and again that hasn&#x2019;t
-    changed much.</p>
+    tiny amount during the timer&#x2019;s run and our dirty flags are
+    coarse-grained, we&#x2019;ll process a bunch of data that hasn&#x2019;t
+    changed. When changes trickle in, that timer will constantly be
+    triggering work over data that hasn&#x2019;t changed much again and again.</p>
 </li>
 <li>
-<p><em>You can end up throwing away work.</em> The timer starts at the beginning
-    of the first change to the primary data, and fires at some fixed when
-    the timer goes off, we&#x2019;ll do the processing, and then immediately start
-    the timer again and throw
-    out what we just did since changes are still coming in.</p>
-<p>If that happens often, it may make sense for the timer to be more
-<span name="adaptive">adaptive</span>. One fix is to reset the timer on <em>every</em> change, not just the
-first. This means it will do the processing after a fixed amount of time
-has passed <em>where the primary state hasn&#x2019;t changed</em>.</p>
-<aside name="adaptive">
-
-<p>An intentional delay where the program waits a bit after receiving user
-input before it responds is called <a href="http://en.wikipedia.org/wiki/Hysteresis"><em>hysteresis</em></a>, a delightful word.</p>
-</aside>
-
-<p>This helps you avoid pointless work, at the expense of running the risk
-of deferring too long. If we were implemented auto-save in a text
-editor, imagine an author feverishly writing for hours on end without a
-break. The timer will keep getting reset and never actually auto-save
-the document.</p>
-</li>
-<li>
-<p><em>You&#x2019;ll need some support for doing work "in the background".</em>
-    Processing on a timer independent of what the player is doing implies
-    the player can keep doing whatever that is while the processing is
-    going on.</p>
-<p>That means we&#x2019;ll likely need threading or some other kind of concurrency
-support so that the work we&#x2019;re doing can happen while the game is still
-responsive and being played. Since the player is also interacting with
-the state that you&#x2019;re processing, you&#x2019;ll need to think about making that
-safe for concurrent modification too.</p>
+<p><em>You&#x2019;ll need some support for doing work asynchronously.</em>
+    Processing the data "in the background" implies that the player can
+    keep doing whatever it is that they&#x2019;re doing at the same time. That
+    means we&#x2019;ll likely need threading or some other kind of concurrency
+    support so that the work we&#x2019;re doing can happen while the game is still
+    responsive and being played.</p>
+<p>Since the player is likely interacting with
+the same primary state that you&#x2019;re processing, you&#x2019;ll need to think
+about making that safe for concurrent modification too.</p>
 </li>
 </ul>
 </li>
 </ul>
 <h3><a href="#how-fine-grained-is-your-dirty-tracking" name="how-fine-grained-is-your-dirty-tracking">How fine-grained is your dirty tracking?</a></h3>
-<p>Imagine we are working on a city-building game. Cities are automatically saved online so the player can resume where they left off. We&#x2019;re using dirty flags to determine which parts of the city have been bulldozed and need to be sent to the server. Each chunk of data we send to the server contains some modified city data and a bit of metadata describing where in the city this modification occurred.</p>
+<p>Imagine our pirate game lets players build and customize their pirate ship. Ships are automatically saved online so the player can resume where they left off. We&#x2019;re using dirty flags to determine which decks of the ship have been fitted and need to be sent to the server. Each chunk of data we send to the server contains some modified ship data and a bit of metadata describing where on the ship this modification occurred.</p>
 <ul>
 <li>
 <p><strong>If it&#x2019;s more fine-grained:</strong></p>
-<p>Say we slap a dirty flag on each tiny square foot of the metropolis.</p>
+<p>Say we slap a dirty flag on each tiny plank of each deck.</p>
 <ul>
 <li>
-<p><em>We&#x2019;ll only process data that actually changed.</em> We&#x2019;ll send exactly the
-    facets of the city that were modified to the server.</p>
+<p><em>You only process data that actually changed.</em> We&#x2019;ll send exactly the
+    facets of the ship that were modified to the server.</p>
 </li>
 <li>
 <p><em>When a lot of data changes, a larger number of dirty flags also need to
@@ -482,12 +461,18 @@ safe for concurrent modification too.</p>
 </li>
 <li>
 <p><strong>If it&#x2019;s more coarse-grained:</strong></p>
-<p>Alternatively, we could associate a dirty bit with each <em>city block</em>.
-Changing anything within that area marks the entire block dirty.</p>
+<p>Alternatively, we could associate a dirty bit with each deck.
+Changing anything on that deck marks the entire deck <span name="swab">dirty</span>.</p>
+<aside name="swab">
+
+<p>I could make some terrible joke about it needing to be swabbed here, but
+I&#x2019;ll refrain.</p>
+</aside>
+
 <ul>
 <li>
-<p><em>We&#x2019;ll end up processing unchanged data.</em> Add a single lamppost to a
-    street corner and we&#x2019;ll have to send the whole block to the server.</p>
+<p><em>You end up processing unchanged data.</em> Add a single barrel to a deck
+    and we&#x2019;ll have to send the whole thing to the server.</p>
 </li>
 <li>
 <p><em>Less memory is used for storing dirty flags.</em></p>
@@ -496,7 +481,7 @@ Changing anything within that area marks the entire block dirty.</p>
 <p><em>Less time is spent on fixed overhead.</em> When processing some changed data,
    there&#x2019;s often a bit of fixed work you have to do on top of handling the
    data itself. In the example here, that&#x2019;s the metadata required to
-   identify where in the city the changed data lives. The bigger your
+   identify where on the ship the changed data is. The bigger your
    processing chunks, the fewer of them there are, which means the less
    fixed overhead you have.</p>
 </li>
